[project]
name = "rnascopepreprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anndata>=0.12.16",
    "anywidget>=0.11.0",
    "czifile[all]>=2026.4.30",
    "jupyterlab>=4.5.7",
    "kaleido>=1.3.0",
    "pint>=0.25.3",
    "plotly[express]>=6.7.0",
    "polars[async,excel,graph,numpy,pandas,plot,pyarrow,rt64,style]>=1.40.1",
    "scanpy>=1.12.1",
    "schema>=0.7.8",
    "scipy>=1.17.1",
]
